[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sfx/music_menu.gd" type="Script" id=1]
[ext_resource path="res://Sfx/Menu + Gameplay/Character Select Gremlin.mp3" type="AudioStream" id=2]

[node name="music_menu" type="Node"]
script = ExtResource( 1 )

[node name="dialogue" type="AudioStreamPlayer" parent="."]

[node name="music_menu" type="AudioStreamPlayer" parent="."]

[node name="char_selected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="menu_select" type="AudioStreamPlayer" parent="."]
